--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.*",
         "cviebrock/eloquent-sluggable": "^4.1",
-        "laracasts/flash": "^2.0"
+        "laracasts/flash": "^2.0",
+        "laravel/scout": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
