Indica hace cuanto fueron generados los articulos en el front

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html": "5.3.*",
         "cviebrock/eloquent-sluggable": "^4.1",
         "laracasts/flash": "^2.0",
-        "laravel/scout": "^2.0"
+        "laravel/scout": "^2.0",
+        "nesbot/carbon": "^1.22"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
